# Todo_App

./: .gitignore  README.md  pyproject.toml  test_main.py
.specify/memory/: constitution.md
history/prompts/constitution/: 1-create-todo-constitution.constitution.prompt.md
history/prompts/todo-cli-app/: 2-create-todo-cli-spec.spec.prompt.md  3-create-implementation-plan.plan.prompt.md  4-generate-implementation-tasks.tasks.prompt.md  5-complete-implementation.green.prompt.md
specs/001-todo-cli-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-cli-app/checklists/: requirements.md
specs/001-todo-cli-app/contracts/: operations.yaml
src/cli/: main.py
src/models/: todo.py
src/services/: todo_manager.py
tests/contract/: test_contracts.py
tests/integration/: test_cli.py
tests/unit/: test_models.py  test_services.py
