[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools"

[project]
name = "todo-cli-app"
version = "0.1.0"
description = "A CLI-based todo application with in-memory storage"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Todo CLI Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = []

[project.scripts]
todo-cli = "src.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]